[package]
name = "robot-arm-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "wayland"]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

#
# Below are performance optimisations
#

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld", "-Zshare-generics=y"]
